// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugins npm-cli login should login a user with OTP setup 1`] = `
"init-scope: berry-test

npm-auth-token: 686159dc-64b3-413e-a244-2de2b8d1c36f
"
`;

exports[`Plugins npm-cli login should login a user with OTP setup 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Successfully logged in
➤ YN0000: Done
",
}
`;

exports[`Plugins npm-cli login should login a user with OTP to a specific scope 1`] = `
"init-scope: berry-test

npmScopes:
  testScope:
    npmAuthToken: 686159dc-64b3-413e-a244-2de2b8d1c36f
    npmRegistryServer: \\"http://yarn.test.registry\\"
"
`;

exports[`Plugins npm-cli login should login a user with OTP to a specific scope 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Successfully logged in
➤ YN0000: Done
",
}
`;

exports[`Plugins npm-cli login should login a user with no OTP setup 1`] = `
"init-scope: berry-test

npm-auth-token: 316158de-64b3-413e-a244-2de2b8d1c80f
"
`;

exports[`Plugins npm-cli login should login a user with no OTP setup 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Successfully logged in
➤ YN0000: Done
",
}
`;

exports[`Plugins npm-cli login should login a user with no OTP setup to a specific scope 1`] = `
"init-scope: berry-test

npmScopes:
  testScope:
    npmAuthToken: 316158de-64b3-413e-a244-2de2b8d1c80f
    npmRegistryServer: \\"http://yarn.test.registry\\"
"
`;

exports[`Plugins npm-cli login should login a user with no OTP setup to a specific scope 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Successfully logged in
➤ YN0000: Done
",
}
`;

exports[`Plugins npm-cli whoami should print the npm registry username for a given scope 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: username
➤ YN0000: Done
",
}
`;

exports[`Plugins npm-cli whoami should print the npm registry username when config has a valid npmAuthIdent 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: username
➤ YN0000: Done
",
}
`;

exports[`Plugins npm-cli whoami should print the npm registry username when config has a valid npmAuthToken 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: username
➤ YN0000: Done
",
}
`;
